<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.UserFragment">

    <LinearLayout
        android:id="@+id/container_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/user_data_frame"
            android:layout_width="300dp"
            android:layout_height="244dp"
            android:layout_marginTop="@dimen/user_margin_top"
            android:background="@drawable/layout_bg"
            android:elevation="@android:dimen/app_icon_size"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="@dimen/photo_margin_top"
                android:background="@drawable/rounded" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_name_margin_top"
                android:background="@drawable/round_corners_20alfa_btn"
                android:textAlignment="center"
                android:textSize="@dimen/standard_font_size" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_margin_top"
                android:background="@drawable/round_corners_20alfa_btn"
                android:text="@string/user_id"
                android:textAlignment="center"
                android:textSize="@dimen/medium_font_size" />

            <TextView
                android:id="@+id/karma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_margin_top"
                android:text="@string/karma"
                android:textAlignment="center"
                android:textSize="@dimen/karma_font_size" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textSize="@dimen/karma_font_size" />

        </LinearLayout>

        <Button
            android:id="@+id/button_make_friends"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:layout_marginTop="@dimen/photo_margin_top"
            android:background="@drawable/round_corners_btn"
            android:text="@string/make_friends"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_data_frame" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_mini"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/error_margin_bottom"
        app:layout_constraintTop_toBottomOf="@+id/container_view" />

    <include
        android:id="@+id/common"
        layout="@layout/common_progress_error" />

</androidx.constraintlayout.widget.ConstraintLayout>